; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/rpc/extr_clnt_vc.c_clnt_vc_ops.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/rpc/extr_clnt_vc.c_clnt_vc_ops.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clnt_ops = type { i32, i32, i32, i32, i32, i32* }

@clnt_vc_ops.ops = internal global %struct.clnt_ops zeroinitializer, align 8
@SIG_SETMASK = common dso_local global i32 0, align 4
@ops_lock = common dso_local global i32 0, align 4
@clnt_vc_call = common dso_local global i32* null, align 8
@clnt_vc_abort = common dso_local global i32 0, align 4
@clnt_vc_geterr = common dso_local global i32 0, align 4
@clnt_vc_freeres = common dso_local global i32 0, align 4
@clnt_vc_destroy = common dso_local global i32 0, align 4
@clnt_vc_control = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.clnt_ops* ()* @clnt_vc_ops to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.clnt_ops* @clnt_vc_ops() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 @sigfillset(i32* %2)
  %4 = load i32, i32* @SIG_SETMASK, align 4
  %5 = call i32 @thr_sigsetmask(i32 %4, i32* %2, i32* %1)
  %6 = call i32 @mutex_lock(i32* @ops_lock)
  %7 = load i32*, i32** getelementptr inbounds (%struct.clnt_ops, %struct.clnt_ops* @clnt_vc_ops.ops, i32 0, i32 5), align 8
  %8 = icmp eq i32* %7, null
  br i1 %8, label %9, label %16

9:                                                ; preds = %0
  %10 = load i32*, i32** @clnt_vc_call, align 8
  store i32* %10, i32** getelementptr inbounds (%struct.clnt_ops, %struct.clnt_ops* @clnt_vc_ops.ops, i32 0, i32 5), align 8
  %11 = load i32, i32* @clnt_vc_abort, align 4
  store i32 %11, i32* getelementptr inbounds (%struct.clnt_ops, %struct.clnt_ops* @clnt_vc_ops.ops, i32 0, i32 4), align 8
  %12 = load i32, i32* @clnt_vc_geterr, align 4
  store i32 %12, i32* getelementptr inbounds (%struct.clnt_ops, %struct.clnt_ops* @clnt_vc_ops.ops, i32 0, i32 3), align 4
  %13 = load i32, i32* @clnt_vc_freeres, align 4
  store i32 %13, i32* getelementptr inbounds (%struct.clnt_ops, %struct.clnt_ops* @clnt_vc_ops.ops, i32 0, i32 2), align 8
  %14 = load i32, i32* @clnt_vc_destroy, align 4
  store i32 %14, i32* getelementptr inbounds (%struct.clnt_ops, %struct.clnt_ops* @clnt_vc_ops.ops, i32 0, i32 1), align 4
  %15 = load i32, i32* @clnt_vc_control, align 4
  store i32 %15, i32* getelementptr inbounds (%struct.clnt_ops, %struct.clnt_ops* @clnt_vc_ops.ops, i32 0, i32 0), align 8
  br label %16

16:                                               ; preds = %9, %0
  %17 = call i32 @mutex_unlock(i32* @ops_lock)
  %18 = load i32, i32* @SIG_SETMASK, align 4
  %19 = call i32 @thr_sigsetmask(i32 %18, i32* %1, i32* null)
  ret %struct.clnt_ops* @clnt_vc_ops.ops
}

declare dso_local i32 @sigfillset(i32*) #1

declare dso_local i32 @thr_sigsetmask(i32, i32*, i32*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
